Added batch deletes

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,7 +23,7 @@
         <input type="submit" type="text" value="View Playlists">
     </form>
     <br>
-    <form method = "GET" action = "/viewSchedule" enctype = "multipart/form-data" >
+    <form method = "GET" action = "/listSchedules" enctype = "multipart/form-data" >
         <input type="submit" type="text" value="View Schedules">
     </form>
 </center>
