--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,12 +7,20 @@
         <input type="submit" type="text" value="Command Page">
     </form>
     <br>
-    <form method = "GET" action = "/upload" enctype = "multipart/form-data" >
-        <input type="submit" type="text" value="Upload Page">
-    </form>
-    <br>
     <form method = "GET" action = "/devices" enctype = "multipart/form-data" >
         <input type="submit" type="text" value="Devices">
+    </form>
+    <br>
+    <form method = "GET" action = "/upload" enctype = "multipart/form-data" >
+        <input type="submit" type="text" value="Upload Media">
+    </form>
+    <br>
+    <form method = "GET" action = "/files/playlist" enctype = "multipart/form-data" >
+        <input type="submit" type="text" value="Create Playlist">
+    </form>
+    <br>
+    <form method = "GET" action = "/files/schedule" enctype = "multipart/form-data" >
+        <input type="submit" type="text" value="Create Schedule">
     </form>
     <br>
     <form method = "GET" action = "/media" enctype = "multipart/form-data" >
