--- a/views/listSchedules.ejs
+++ b/views/listSchedules.ejs
@@ -24,7 +24,7 @@
             $.post('/files/deleteSchedules', {
                 delSched: scheduleList,
             }, (data)=>{
-
+                location.reload()
             })
         })
     })  
