--- a/views/playlist.ejs
+++ b/views/playlist.ejs
@@ -104,7 +104,7 @@
                 playlistName: playlistName,
                 aspectRatio: aspectRatio
             }, function(data){
-                
+                location.reload()
                 //$('#playlistResult').html(data)
             })
         })
