--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -234,7 +234,7 @@
                 schedule: schedule,
                 uniquePlaylist: uniquePlaylist,
             }, (data) => {
-                $('#scheduleResult').html(data)
+                location.reload()
             })
         })
     })
