--- a/views/viewPlaylist.ejs
+++ b/views/viewPlaylist.ejs
@@ -64,7 +64,7 @@
             $.post('/files/deletePlaylists', {
                 delPlay: playlistList,
             }, (data)=>{
-
+                location.reload()
             })
         })
     })  
