--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -21,7 +21,7 @@
         $("#1").children().first().change(handleFiles);
         $("#newrows").click(function(){
             var addUpload = "<tr>";
-            addUpload += "<td id = '"+ ++fileCount +"'><input type = 'file' name = 'file' accept='.jpg, .jpeg, .png .mov .mp4' required/><br><progress id='progressBar' value='0' max='100' style='width:300px;'></progress></td>";
+            addUpload += "<td id = '"+ ++fileCount +"'><input type = 'file' name = 'file' accept='image/*, video/*' required/><br><progress id='progressBar' value='0' max='100' style='width:300px;'></progress></td>";
             // addUpload += "<td><input type = 'text' name = 'fadeIn' pattern = '^(?:[1-9][0-9]*|0)$' required/></td>";
             // addUpload += "<td><input type = 'text' name = 'fadeOut' pattern = '^(?:[1-9][0-9]*|0)$' required/></td>";
             // addUpload += "<td><input type = 'text' name = 'length' id = 'length"+ fileCount +"' pattern = '^(?:[1-9][0-9]*)$'/></td>";
